--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html, body {
     border-radius: 50%;
     width: 300px;
     border: 4px solid white;
+    float: right;
 }
 
 .hero {
@@ -21,6 +22,10 @@ html, body {
     height: calc(80vh - 50px);
     /* -20vh cuz pad*/
     margin-top: 50px;
+}
+
+body {
+    background-color: rgb(239, 239, 239);
 }
 
 body nav {
@@ -63,7 +68,8 @@ nav img {
 }
 
 .hero-content {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
 }
 
@@ -118,6 +124,13 @@ nav img {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: rgb(224, 224, 224);
+    padding: 20px;
+}
+
+.workh1{
+    width: 90vw;
+    margin: auto;
 }
 
 .e {
@@ -126,7 +139,7 @@ nav img {
     border: 2px solid orange;
     border-radius: 15px;
 
-    width: 90vw;
+width: 90vw;
     margin: auto;
 }
 
@@ -186,6 +199,12 @@ form input {
     box-shadow: #222222 1px 1px 7px;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
 @media (max-width: 785px) {
     .e {
         grid-template-columns: 1fr;
@@ -195,7 +214,7 @@ form input {
         font-size: 1em;
     }
     .hero-content {
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 
     .e {
@@ -217,6 +236,10 @@ form input {
 
     .map iframe {
         width: 320px;
+    }
+
+    .folio {
+        display: none;
     }
 }
 
